
2021-08-28  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_assignment_name): fix SELECT filename ASSIGN filename
	  to lead to "redefinition of filename" when (the default) dialect option
	  assign-clause=dynamic is active; identical names are now always seen
	  as literal (similar to assign-clause=external, but without label
	  handling), see bug 669

2021-07-29  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, config.def: changed the auto-setting of the RECURSIVE attribute
	  in programs that CALL their own PROGRAM-ID (possibly deep in never called
	  copybooks) to depend on the dialect option "self-call-recursive", with the
	  option to skip that or warn/error, fixing bug 686
	* parser.y: fix bug 748 SIGSEGV after warning: EXTFH address is not impl.

2021-07-12  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_getenv_path): drop invalid list from path
	* config.c (cb_load_std): fixed old error passing enum instead of int
	* parser.y: minor adjustments to USE handling
	* pplex.l: drop "spurious $" in col 7 rule, fixing bug #577

2021-07-07  Simon Sobisch <simonsobisch@gnu.org>

	* reserved.c, scanner.l, tree.c. pplex.l: use quotes again for including bison
	  generated headers, fixing bug #721
	* parser.y, reserved.c, scanner.l, tree.c: work around bad Windows SDK header
	* pplex.l: fixed rule that could prevent PROCESS/CBL to work as intended

2021-05-27  Simon Sobisch <simonsobisch@gnu.org>

	* help.c: use double-dash for long options

2021-05-14  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c (finalize_file): allow use of GLOBAL record-key-names
	  in nested programs

2021-05-12  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l: fixed #716 by including necessary context for PROCESS statement
	  handling and added the CBL variant to not match the word everywhere

2021-05-11  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (use_reporting): check for valid identifier before use,
	  use common malloc for generated common
