@@ -363,6 +363,8 @@ enum cb_intr_enum {
 	CB_INTR_ANNUITY,
 	CB_INTR_ASIN,
 	CB_INTR_ATAN,
+	CB_INTR_BIT_OF,
+	CB_INTR_BIT_TO_CHAR,
 	CB_INTR_BOOLEAN_OF_INTEGER,
 	CB_INTR_BYTE_LENGTH,
 	CB_INTR_CHAR,
@@ -394,6 +396,8 @@ enum cb_intr_enum {
 	CB_INTR_FORMATTED_DATETIME,
 	CB_INTR_FORMATTED_TIME,
 	CB_INTR_FRACTION_PART,
+	CB_INTR_HEX_OF,
+	CB_INTR_HEX_TO_CHAR,
 	CB_INTR_HIGHEST_ALGEBRAIC,
 	CB_INTR_INTEGER,
 	CB_INTR_INTEGER_OF_BOOLEAN,
